--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li> <a href="mi_sitio.html"></a>Ir a mi pagina</li>
+                <li><a href="mi_sitio.html">Ir a mi pagina</a></li>
             </ul>
         </nav>
     </header>
